# backend/main.go
@@ -8,9 +8,11 @@ import (
 
 	"github.com/eeritvan/calendar/api"
 	"github.com/eeritvan/calendar/internal/sqlc"
+	"github.com/golang-jwt/jwt/v5"
 
 	"github.com/jackc/pgx/v5/pgxpool"
 	"github.com/joho/godotenv"
+	echojwt "github.com/labstack/echo-jwt/v4"
 	"github.com/labstack/echo/v4"
 )
 
@@ -30,6 +32,28 @@ func main() {
 	server := api.NewServer(queries)
 
 	e := echo.New()
+
+	JWTkey := os.Getenv("JWT_KEY")
+	e.Use(echojwt.WithConfig(echojwt.Config{
+		SigningKey: []byte(JWTkey),
+		SuccessHandler: func(c echo.Context) {
+			token := c.Get("user").(*jwt.Token)
+			claims := token.Claims.(jwt.MapClaims)
+
+			userId := claims["userId"].(string)
+			username := claims["username"].(string)
+
+			c.Set("userId", userId)
+			c.Set("username", username)
+		},
+		Skipper: func(c echo.Context) bool {
+			switch c.Path() {
+			case "/signup", "/login":
+				return true
+			}
+			return false
+		},
+	}))
 
 	api.RegisterHandlers(e, server)
 
